[gd_scene load_steps=4 format=3 uid="uid://c885aifu2fial"]

[ext_resource type="Texture2D" uid="uid://dmhcmvsxtvfgl" path="res://asset/UI/dialog/response.png" id="1_ovmp0"]
[ext_resource type="Script" path="res://dialog/main_balloon/main_response_example.gd" id="2_lxyyv"]
[ext_resource type="Theme" uid="uid://bc3ohqpp1sfg3" path="res://asset/art/transparency_theme.tres" id="2_vkudq"]

[node name="ResponseExample" type="TextureButton"]
texture_normal = ExtResource("1_ovmp0")
script = ExtResource("2_lxyyv")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_left = 32.0
offset_top = 40.0
offset_right = 419.0
offset_bottom = 81.0
theme = ExtResource("2_vkudq")
text = "Response"
horizontal_alignment = 1

[connection signal="button_down" from="." to="." method="_on_button_down"]
[connection signal="button_up" from="." to="." method="_on_button_up"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
